@@ -1,6 +1,8 @@
 #ifndef _DBGCMD_H_
 #define _DBGCMD_H_
 
+#include "argparse.h"
+
 /* When --waitfor is included as an argument for 'attach'. */
 extern int keep_checking_for_process;
 
